# toroidal-indexer

./: .gitignore  README.md  indexer_server.py  pyproject.toml  requirements.txt
examples/claude-hook/: indexer_inject.py  settings.json
hooks/: indexer_commit.py  indexer_inject.py
indexer/: __init__.py  build.py  clustering.py  contract_extractor.py  contract_matcher.py  contract_patterns.py  embed.py  graph_report.py  lsp.py  lsp_client.py  lsp_configs.py  mcp_queries.py  process_detector.py  schema.py
indexer/extractors/: __init__.py  bash.py  dependencies.py  go.py  go_ts.py  protobuf.py  python.py  rust.py  rust_ts.py  solidity.py  solidity_ts.py  treesitter_base.py  typescript.py  typescript_ts.py
scripts/: ai_pass.py  dedup.py  lsp_pass.py
tests/: test_ai_flow.py  test_ai_prompts.py  test_ai_storage.py  test_build.py  test_clustering.py  test_commit.py  test_contracts.py  test_extractor_bash.py  test_extractor_dependencies.py  test_extractor_go.py  test_extractor_protobuf.py  test_inject.py  test_lsp.py  test_lsp_client.py  test_lsp_configs.py  test_lsp_queries.py  test_mcp.py  test_processes.py  test_schema.py  test_treesitter_base.py  test_treesitter_go.py  test_treesitter_rust.py  test_treesitter_typescript.py
