[project]
name = "toroidal-indexer"
version = "0.1.0"
description = "Structural code graph for the Torus Framework"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "surrealdb>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["indexer"]
